compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_import_with_unqualified_member_and_alias.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import     mod.{ type Type  }   as      module"
---
----- BEFORE RENAME
-- mod.gleam


-- app.gleam
import     mod.{ type Type  }   as      module
                                        ↑▔▔▔▔▔


----- AFTER RENAME
-- mod.gleam


-- app.gleam
import     mod.{ type Type  }   as alias
